2006-02-28  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.6.

2006-02-28  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	Fix dist.

2006-02-28  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Change sample data, show extension in sample label, and update it
	more often.

2006-02-28  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Use icon themed icon for window icons.

2006-02-28  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Notify on property changes.

2006-02-28  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c:
	Remove hard-coded window icon.

2006-02-26  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix indentation.

2006-02-26  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Don't cache the metadata, it breaks too much.

2006-02-22  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	* data/sound-juicer-24.png:
	Add 24x24 icon.

2006-02-22  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.svg:
	Updated artwork.

2006-02-22  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Require libgnomeui 2.13 (#332134)

2006-02-15  Ross Burton  <ross@burtonini.com>

	* data/orange-slice.png:
	* data/sound-juicer.png:
	Remove.

	* data/sound-juicer-16.png:
	* data/sound-juicer-22.png:
	* data/sound-juicer.svg:
	* data/Makefile.am:
	New artwork by Lapo Calamandrei <l.calamandrei@neri.it>.

	* data/sound-juicer.desktop.in:
	* src/sj-about.c:
	Update for new artwork.

2006-02-15  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Unmark some strings as translatable.

2006-02-15  Ross Burton  <ross@burtonini.com>

	* src/sound-juicer.h:
	* src/sj-extractor.c:
	* src/sj-play.c:
	Pull out the cd source name as define.

2006-02-15  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-prefs.c:
	Re-arrange the Preferences dialog, add ellipsis as required,
	change a few strings and add mnemonics to the main window.  Yay UI
	Review!
