@@ -1,3 +1,8 @@
+2006-03-01  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-prefs.c:
+	Don't translate the same track data.
+
 2006-02-28  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
